# backdrops/Makefile.am
#

backdropsdir = $(datadir)/xfce4/backdrops

backdrops_DATA =							\
	flower.png							\
	xfce4gradientcurve.png						\
	xfce4logo.png							\
	xfce-in-a-grid.png						\
	xfce-in-the-moon.png						\
	xfce-stripes.png						\
	xfce-smoke.png							\
	xfce-turbulence.png						\
	xfce-stellar-tile.png
        
EXTRA_DIST = $(backdrops_DATA)
