# backdrops/Makefile.am
#

backgroundsdir = $(datadir)/backgrounds/xfce

backgrounds_DATA = \
    xfce-blue.jpg \
    xfce-stripes.svg \
    xfce-verticals.svg \
    xfce-teal.svg \
    xfce-shapes.svg \
    xfce-flower.svg \
    xfce-leaves.svg \
    xfce-x.svg \
    xfce-light.svg \
    xfce-mouserace.svg \
    xfce-cp-dark.svg

EXTRA_DIST = \
	$(backgrounds_DATA) \
	README.md \
	meson.build
