install_data(
  [
    'xfce-blue.jpg',
    'xfce-stripes.svg',
    'xfce-verticals.svg',
    'xfce-teal.svg',
    'xfce-shapes.svg',
    'xfce-flower.svg',
    'xfce-leaves.svg',
    'xfce-x.svg',
    'xfce-light.svg',
    'xfce-mouserace.svg',
    'xfce-cp-dark.svg',
  ],
  install_dir: get_option('datadir') / 'backgrounds' / 'xfce',
)
