icons32dir = $(datadir)/icons/hicolor/32x32/apps

icons32_DATA = \
	32x32/xfce4-backdrop.png		\
	32x32/xfce4-menueditor.png

icons48dir = $(datadir)/icons/hicolor/48x48/apps

icons48_DATA = \
	48x48/xfce4-backdrop.png		\
	48x48/xfce4-menueditor.png

pixmapsdir = $(datadir)/pixmaps

pixmaps_DATA = \
	xfce4_xicon.png \
	xfce4_xicon1.png \
	xfce4_xicon2.png \
	xfce4_xicon3.png \
	xfce4_xicon4.png

EXTRA_DIST = \
	$(icons32_DATA) \
	$(icons48_DATA) \
	$(pixmaps_DATA) \
	me-icon16.xpm \
	me-icon24.xpm \
	me-icon32.xpm \
	me-icon48.xpm
